# Orion

./: .gitignore  README.md  docker-compose.yml  run.sh
client_hud/: README.md  pyproject.toml
client_hud/src/: audio_engine.py  hotkey_manager.py  orion_hud.py  tts_engine.py
orchestrator/: README.md  orchestrator_v3.py
servers/google_calendar/: Dockerfile  README.md  pyproject.toml
servers/google_calendar/src/: credentials_manager.py  mcp_server.py  rate_limiter.py  redis_worker.py
servers/google_calendar/tests/: test_server.py
