[project]
name = "orion-client-hud"
version = "0.1.0"
description = "MacOS Native HUD and hotkey listener for Orion"
authors = [
    {name = "Orion Framework"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "pyaudio>=0.2.14",
    "pynput>=1.7.6",
    "redis>=5.0.3",
    "numpy>=1.26.0",
    "speechrecognition>=3.16.0",
    "pywhispercpp>=1.4.1",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
